--- a/.github/workflows/build_library.yml
+++ b/.github/workflows/build_library.yml
@@ -42,6 +42,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade platformio
+    - name: Install 3rd party dependecies
+      run: | 
+        pio lib -g install \
+        https://github.com/me-no-dev/AsyncTCP        
         
     - name: Create main file
       run: |
