--- a/.github/workflows/compile_examples.yml
+++ b/.github/workflows/compile_examples.yml
@@ -1,4 +1,4 @@
-name: ESP Async Web Server CI
+name: Compile example
 
 on:
   push:
@@ -43,7 +43,8 @@ jobs:
         pio lib -g install \
         https://github.com/me-no-dev/AsyncTCP \
         https://github.com/me-no-dev/ESPAsyncTCP \
-        https://github.com/lorol/ESPAsyncWebServer
+        https://github.com/alanswx/ESPAsyncWiFiManager \
+        https://github.com/lorol/ESPAsyncWebServer 
         
     - name: Run PlatformIO Examples
       run: pio ci --board=nodemcuv2
